--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
+language: python
 sudo: required
 
 services:
@@ -16,8 +17,8 @@ before_script:
   - docker-compose -f docker-compose.yml up --build -d
 
 script:
-  - docker-compose -f docker-compose.yml run users-service python manage.py test
-  - docker-compose -f docker-compose.yml run users-service flake8 project
+  - docker-compose -f docker-compose.yml run user-service python manage.py test
+  - docker-compose -f docker-compose.yml run user-service flake8 project
 
 after_script:
   - docker-compose -f docker-compose.yml down
