--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -1,21 +1,21 @@
-version: "2.1"
+version: "3.3"
 
 services:
   users-db:
     container_name: users-db
-    build: ./project/db
+    build:
+    - context: ./services/users/project/db
+    - dockerfile: Dockerfile
     ports:
       - 3307:3306
     environment:
       - MYSQL_ROOT_PASSWORD=root321
-    healthcheck:
-      test: exit 0
 
   user-service:
     container_name: user-service
-    build: ./
-#    volumes:
-#      - ".:/usr/src/app"
+    build:
+      context: ./services/users
+      dockerfile: Dockerfile-prod
     expose:
       - "5000"
     environment:
@@ -23,19 +23,18 @@ services:
       - DATABASE_URL=mysql+pymysql://root:root321@users-db:3306/users_prod
       - DATABASE_TEST_URL=mysql+pymysql://root:root321@users-db:3306/users_test
     depends_on:
-      users-db:
-        condition: service_healthy
+      - users-db
     links:
       - users-db
+    command: gunicorn -b 0.0.0.0:5000 manage:app
 
   nginx:
     container_name: nginx
-    build: ./nginx/
+    build: ./services/nginx/
     restart: always
     ports:
-      - 80:80
+      - 8080:80
     depends_on:
-      user-service:
-        condition: service_started
+      - user-service
     links:
       - user-service
